chore: update css

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </aside>
   </main>
 
-  <script src="./js/diva-sdk-0.2.2.min.js"></script>
+  <script src="https://bj.sheencity.com/docs/diva/_lib/diva-sdk-0.2.2.min.js"></script>
   <script>
 
     async function run() {
