--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <aside class="aside-left">
       <section>
         <button onclick="window.location.href='./chapter001.html'">第一课</button>
+        <button onclick="window.location.href='./chapter002.html'">第二课</button>
       </section>
     </aside>
   </main>
