--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SHEENCITY DIVA DEMO</title>
-  <link rel="stylesheet" type="text/css" href="./css/diva-light-style.css" />
+  <link rel="stylesheet" type="text/css" href="https://bj.sheencity.com/docs/diva/_lib/diva-light-style.css" />
 </head>
 
 <body>
@@ -23,8 +23,9 @@
     <!-- 左侧区域 -->
     <aside class="aside-left">
       <section>
-        <button onclick="window.location.href='./chapter001.html'">第一课</button>
-        <button onclick="window.location.href='./chapter002.html'">第二课</button>
+        <button onclick="window.location.href='./chapters/001/index.html'">第一课</button>
+        <button onclick="window.location.href='./chapters/002/index.html'">第二课</button>
+        <button onclick="window.location.href='./chapters/003/index.html'">第三课</button>
       </section>
     </aside>
   </main>
